Fix a layout bug on the channel page
The channel description could get too wide, this fixes the issue by
setting a max-width on it.

closes #835
pr #836

--- a/static/scss/channel.scss
+++ b/static/scss/channel.scss
@@ -1,5 +1,6 @@
 .channel-about {
   position: relative;
+  max-width: 400px;
 
   @include breakpoint(desktop) {
     &:first-child {
